fix small bugs + improve doc